--- a/TeladeLogin.html
+++ b/TeladeLogin.html
@@ -59,7 +59,7 @@
                         userFound = true;
                         // Salvar o nome do usuário logado no localStorage
                         localStorage.setItem('nomeUsuario', data.name);
-                        window.location.href = "telaPrincipal.html"; // Altere para a sua tela principal
+                        window.location.href = "./TelaPrincipal.html"; // Altere para a sua tela principal
                     }
                 });
 
