--- a/cadastrobarbeiro.html
+++ b/cadastrobarbeiro.html
@@ -12,7 +12,7 @@
             <div class="left-side">
                 <h1>Barber Express</h1>
                 <p>Entre e comece a fazer a sua clientela agora mesmo</p>
-                <button class="btn-enter">ENTRAR</button>
+                <a href="./TeladeLoginbarbeiro.html"><button class="btn-enter">ENTRAR</button></a>
                 <a href="#" class="forgot-password">Esqueci a senha</a>
             </div>
             <div class="right-side">
