--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="card client-card">
                     <p>Entre ou cadastre-se como barbeiro para começar a fazer sua clientela!</p>
                     <a href="cadastrobarbeiro.html" class="btn btn-outline">Cadastrar</a>
-                    <a href="TeladeLogin.html" class="btn btn-outline">Entrar</a>
+                    <a href="TeladeLoginbarbeiro.html" class="btn btn-outline">Entrar</a>
                 </div>
             </div>
         </main>
